log
Thu 25 Apr 2024 06:15:44 PM UTC: 
 tests:  0|6
total_score: 0/70
8b14c06
Thu 25 Apr 2024 06:19:21 PM UTC: 
 hashmap.c | 10 ++++++++++
 1 file changed, 10 insertions(+)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:61:3: error: ‘map’ undeclared (first use in this function); did you mean ‘mapeo’?
   61 |   map->buckers = (Pair**) malloc(capacity*sizeof(Pair*));
      |   ^~~
      |   mapeo
hashmap.c:61:3: note: each undeclared identifier is reported only once for each function it appears in
hashmap.c:65:3: error: expected ‘(’ before ‘return’
   65 |   return NULL;
      |   ^~~~~~
      |   (
hashmap.c:66:1: error: control reaches end of non-void function [-Werror=return-type]
   66 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
16db653
Thu 25 Apr 2024 06:19:46 PM UTC: 
 hashmap.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:61:3: error: ‘map’ undeclared (first use in this function); did you mean ‘mapeo’?
   61 |   map->buckers = (Pair**) malloc(capacity*sizeof(Pair*));
      |   ^~~
      |   mapeo
hashmap.c:61:3: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
bf263c1
Thu 25 Apr 2024 06:40:46 PM UTC: 
 hashmap.c | 11 ++++++-----
 1 file changed, 6 insertions(+), 5 deletions(-)
 tests:  0|6
total_score: 0/70
3d8d3b9
Thu 25 Apr 2024 07:13:45 PM UTC: 
 hashmap.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
9f4f50d
Thu 25 Apr 2024 07:16:19 PM UTC: 
 hashmap.c | 17 +++++++++++++++++
 1 file changed, 17 insertions(+)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:54:21: error: ‘Pair’ has no member named ‘next’
   54 |       while (current->next != NULL) {
      |                     ^~
hashmap.c:55:27: error: ‘Pair’ has no member named ‘next’
   55 |          current = current->next;
      |                           ^~
hashmap.c:57:12: error: ‘Pair’ has no member named ‘next’
   57 |     current->next = new_pair;
      |            ^~
Compilation failed
57c8e75
Thu 25 Apr 2024 07:17:57 PM UTC: 
 hashmap.c | 8 +++-----
 1 file changed, 3 insertions(+), 5 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:54:17: error: ‘Pair’ has no member named ‘next’
   54 |         new_pair->next = map->buckets[index];
      |                 ^~
Compilation failed
8242948
Thu 25 Apr 2024 07:21:21 PM UTC: 
 hashmap.c | 20 ++++++++++++--------
 1 file changed, 12 insertions(+), 8 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:52:23: error: ‘Pair’ has no member named ‘next’
   52 |         while (current->next != NULL) {
      |                       ^~
hashmap.c:58:30: error: ‘Pair’ has no member named ‘next’
   58 |             current = current->next;
      |                              ^~
hashmap.c:60:16: error: ‘Pair’ has no member named ‘next’
   60 |         current->next = new_pair;
      |                ^~
Compilation failed
5e7de9a
Thu 25 Apr 2024 07:23:42 PM UTC: 
 hashmap.c | 19 +++++--------------
 1 file changed, 5 insertions(+), 14 deletions(-)
 tests:  2|5
total_score: 20/70
166dd68
Thu 25 Apr 2024 07:25:13 PM UTC: 
 hashmap.c | 17 ++++++++++++++---
 1 file changed, 14 insertions(+), 3 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:53:23: error: ‘Pair’ has no member named ‘next’
   53 |         while (current->next != NULL) {
      |                       ^~
hashmap.c:59:30: error: ‘Pair’ has no member named ‘next’
   59 |             current = current->next;
      |                              ^~
hashmap.c:62:16: error: ‘Pair’ has no member named ‘next’
   62 |         current->next = new_pair;
      |                ^~
Compilation failed
e373cf1
Thu 25 Apr 2024 07:26:11 PM UTC: 
 hashmap.c | 7 -------
 1 file changed, 7 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:53:23: error: ‘Pair’ has no member named ‘next’
   53 |         while (current->next != NULL) {
      |                       ^~
test.c:453:5: error: ‘main’ is normally a non-static function [-Werror=main]
  453 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:511:1: error: expected declaration or statement at end of input
  511 | }
      | ^
test.c:511:1: error: expected declaration or statement at end of input
At top level:
test.c:453:5: error: ‘main’ defined but not used [-Werror=unused-function]
  453 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:217:5: error: ‘insert_test5’ defined but not used [-Werror=unused-function]
  217 | int insert_test5(){ //factor de carga>0.7, se llama a función enlarge
      |     ^~~~~~~~~~~~
test.c:131:6: error: ‘compare_test’ defined but not used [-Werror=unused-function]
  131 | void compare_test(){
      |      ^~~~~~~~~~~~
test.c:125:6: error: ‘hash_test3’ defined but not used [-Werror=unused-function]
  125 | void hash_test3(){ //no random
      |      ^~~~~~~~~~
test.c:111:6: error: ‘hash_test2’ defined but not used [-Werror=unused-function]
  111 | void hash_test2(){ // colisiones
      |      ^~~~~~~~~~
test.c:100:6: error: ‘hash_test1’ defined but not used [-Werror=unused-function]
  100 | void hash_test1(){ // posición válida
      |      ^~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
cd2fc15
Thu 25 Apr 2024 07:26:24 PM UTC: 
 hashmap.c | 10 +++-------
 1 file changed, 3 insertions(+), 7 deletions(-)
 tests:  2|5
total_score: 20/70
0c54f91
Thu 25 Apr 2024 07:27:48 PM UTC: 
 hashmap.c | 10 +++++++---
 1 file changed, 7 insertions(+), 3 deletions(-)
 tests:  5|4
total_score: 30/70
158ee62
Thu 25 Apr 2024 07:30:04 PM UTC: 
 hashmap.c | 11 +++++++++++
 1 file changed, 11 insertions(+)
In file included from test.c:4:
hashmap.c: In function ‘searchMap’:
hashmap.c:107:26: error: ‘Pair’ has no member named ‘next’
  107 |         current = current->next; // Move to the next Pair
      |                          ^~
Compilation failed
38a2461
Thu 25 Apr 2024 07:30:13 PM UTC: 
 hashmap.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘searchMap’:
hashmap.c:107:22: error: ‘Pair’ has no member named ‘next’
  107 |     current = current->next;
      |                      ^~
Compilation failed
a652b24
Thu 25 Apr 2024 07:33:55 PM UTC: 
 hashmap.c | 8 ++++++++
 1 file changed, 8 insertions(+)
 tests:  5|4
total_score: 30/70
6ff35bd
Thu 25 Apr 2024 07:38:29 PM UTC: 
 hashmap.c | 49 ++++++++++++++++++++++++++++++++++++++++---------
 1 file changed, 40 insertions(+), 9 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘eraseMap’:
hashmap.c:101:46: error: ‘Pair’ has no member named ‘next’
  101 |                 map->buckets[index] = current->next;
      |                                              ^~
hashmap.c:103:21: error: ‘Pair’ has no member named ‘next’
  103 |                 prev->next = current->next;
      |                     ^~
hashmap.c:103:37: error: ‘Pair’ has no member named ‘next’
  103 |                 prev->next = current->next;
      |                                     ^~
hashmap.c:112:26: error: ‘Pair’ has no member named ‘next’
  112 |         current = current->next;
      |                          ^~
hashmap.c: In function ‘searchMap’:
hashmap.c:127:26: error: ‘Pair’ has no member named ‘next’
  127 |         current = current->next;
      |                          ^~
Compilation failed
441c183
Thu 25 Apr 2024 07:39:46 PM UTC: 
 hashmap.c | 47 +++++++++++++----------------------------------
 1 file changed, 13 insertions(+), 34 deletions(-)
 tests:  15|2
total_score: 50/70
cff1cf6
Thu 25 Apr 2024 07:41:03 PM UTC: 
 hashmap.c | 14 +++++++++++++-
 1 file changed, 13 insertions(+), 1 deletion(-)
 tests:  16|1
total_score: 60/70
a38969c
